# FMCt

./: .#newFMC.cabal  .gitignore  CHANGELOG.md  Dockerfile  FMCt.cabal  FMCt.nix  LICENSE  README.md  README.org  cabal.project  default.nix  flake.nix  fourmolu.yaml  makefile  package.nix  shell.nix
.github/workflows/: docker-image.yml  haskell.yml
app/: Main.hs
docker/: Dockerfile
nix/: sources.json
scripts/: openDoc.sh  reformat.sh
src/: FMCt.hs  Main.hs
src-exe/: Evaluator.hs  Examples.hs  Main.hs  MainOnline.hs  Parsing.hs  Pretty.hs  Syntax.hs  Test.hs  TypeChecker.hs  TypeSyntax.hs
src/FMCt/: Evaluator.hs  Examples.hs  Parsing.hs  Pretty.hs  Syntax.hs  TypeChecker.hs  TypeChecker2.hs  TypeChecker3.hs  TypeCheckerAlt.hs  Web.hs
src/FMCt/Aux/: Pretty.hs  TC.hs  ToTex.hs
src/FMCt/Parsing/: Aux.hs  Language.hs  Location.hs  Terms.hs  Types.hs
src/FMCt/TypeChecker/: Aux.hs  Error.hs  NormalForm.hs
src/FMCt/Web/: MainWebsite.hs
src/FMCt/Web/Components/: Brick.hs  DerivePage.hs  FormPage.hs  MainPage.hs  ParsedBox.hs  RegularPage.hs  ReplPage.hs
src/FMCt/Web/Helpers/: Heroku.hs
src/FMCt/Web/Pages/: Derive.hs  DeriveAlt.hs  Evaluator  Evaluator.hs  MainPage.hs  Parse.hs  Root.hs
src/FMCt/Web/Style/: BootStrap.hs  MainStyle.hs  StdStylingHeader.hs
test/: Main.hs  TestGenerators.hs
test/Generators/: Aux.hs  Instances.hs  Parser.hs  Term.hs  Type.hs
test/Tests/Evaluator/: Basic.hs
test/Tests/Parsing/: Basic.hs
webApp/: Main.hs
