cabal-version:          2.4
name:                   FMCt
version:                0.6.0.0
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Vlad Posmangiu Luchian
maintainer:             cstmlcodes@gmail.com
copyright:              "Copyright belongs to Vlad Posmangiu Luchian, 2021."
category:               Language
build-type:             Simple
extra-source-files:     CHANGELOG.md,README.md

common GHC-flags
  Ghc-Options:
    -Wall
    -Wno-name-shadowing
    -Wno-unuused-top-binds

  default-language:
    Haskell2010

common common-extensions
  default-extensions:
    OverloadedStrings, LambdaCase, FlexibleInstances, FlexibleContexts,
    RankNTypes, ScopedTypeVariables, TypeApplications, TypeFamilies,
    InstanceSigs

common library-modules
  other-modules:
    FMCt.Aux.Pretty
    FMCt.Aux.ToTex
    FMCt.Evaluator
    FMCt.Examples
    FMCt.Parsing
    FMCt.Pretty
    FMCt.Syntax
    FMCt.TypeChecker
    FMCt.Parsing.Types
    FMCt.Parsing.Terms
    FMCt.Parsing.Types

common library-specs
  import: GHC-flags
  import: common-extensions
  import: library-modules
  build-depends:
    base,
    containers,
    data-default,
    lens,
    parsec,
    transformers,

  hs-source-dirs:
    src


library
  import:            library-specs
  exposed-modules:   FMCt

executable FMCt-exe
  import:         GHC-flags
  import:         common-extensions
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    FMCt, base, containers, data-default,
    lens, mtl, parsec, transformers,

test-suite fmct-test
  import:         library-specs
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:  TestGenerators
  build-depends:
    tasty-expected-failure,tasty-hedgehog,tasty-hunit,
    tasty-quickcheck,tasty,QuickCheck,hedgehog,
