cabal-version:      2.4
name:               FMCt
version:            0.6.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Vlad Posmangiu Luchian
maintainer:         cstmlcodes@gmail.com
copyright:          "Copyright belongs to Vlad Posmangiu Luchian, 2021."
category:           Language
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common GHC-flags
  ghc-options:      -Wall -Wno-name-shadowing -Wno-unused-top-binds
  default-language: Haskell2010

common common-extensions
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

common evaluator-modules
  hs-source-dirs: src
  other-modules:
    FMCt.Aux.Pretty
    FMCt.Evaluator
    FMCt.Parsing
    FMCt.Syntax
    FMCt.TypeChecker

common library-modules
  hs-source-dirs: src
  other-modules:
    FMCt.Aux.Pretty
    FMCt.Aux.ToTex
    FMCt.Evaluator
    FMCt.Examples
    FMCt.Parsing
    FMCt.Parsing.Language
    FMCt.Parsing.Terms
    FMCt.Parsing.Types
    FMCt.Pretty
    FMCt.Syntax
    FMCt.TypeChecker

common library-specs
  import:        GHC-flags
  import:        common-extensions
  import:        library-modules
  build-depends:
    , base
    , containers
    , data-default
    , lens
    , parsec
    , transformers

library
  import:          library-specs
  exposed-modules: FMCt

executable FMCt-exe
  import:         GHC-flags
  import:         library-modules
  import:         common-extensions
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base
    , containers
    , data-default
    , lens
    , mtl
    , parsec
    , transformers

executable evaluator
  import:         common-extensions
  import:         evaluator-modules
  build-depends:
    , base
    , containers
    , data-default
    , lens
    , parsec
    , transformers

  hs-source-dirs: app
  main-is:        Main.hs

test-suite fmct-test
  import:         library-specs
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:
    Generators.Parser
    TestGenerators

  build-depends:
    , hedgehog
    , QuickCheck
    , tasty
    , tasty-expected-failure
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
